--- a/index.html
+++ b/index.html
@@ -3,58 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Window</title>
-    <style>
-        /* Add some CSS to style the window and button */
-        body {
-            background-color: green;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        #timeDisplay {
-            padding: 20px;
-            font-size: 18px;
-            color: white;
-        }
-
-        button {
-            padding: 20px;
-            font-size: 18px;
-        }
-    </style>
+    <title>Simple Messaging</title>
 </head>
 <body>
+    <div id="room-code-container">
+        <button id="create-room">Create Room</button>
+        <input id="join-room" placeholder="Enter Room Code" />
+        <button id="join-button">Join Room</button>
+        <div id="room-code"></div>
+    </div>
 
-<button onclick="showTime()">Time</button>
-<div id="timeDisplay"></div>
+    <ul id="messages"></ul>
+    <form id="form" action="">
+        <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
 
-<script>
-    function showTime() {
-        var currentTime = new Date();
-        var hours = currentTime.getHours();
-        var minutes = currentTime.getMinutes();
-        var seconds = currentTime.getSeconds();
-        var meridiem = (hours >= 12) ? "PM" : "AM";
+    <div id="user-list"></div>
 
-        // Convert to 12-hour format
-        hours = (hours % 12) || 12;
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        $(function () {
+            var socket = io();
 
-        // Add leading zero if needed
-        hours = (hours < 10) ? "0" + hours : hours;
-        minutes = (minutes < 10) ? "0" + minutes : minutes;
-        seconds = (seconds < 10) ? "0" + seconds : seconds;
+            // Room creation
+            $('#create-room').click(function () {
+                socket.emit('create room');
+            });
 
-        var timeString = hours + ":" + minutes + ":" + seconds + " " + meridiem;
+            // Room joining
+            $('#join-button').click(function () {
+                var roomCode = $('#join-room').val();
+                socket.emit('join room', roomCode);
+            });
 
-        // Display time in a div
-        document.getElementById("timeDisplay").innerHTML = 'Current time is: ' + timeString;
-    }
-</script>
+            // Listen for room code
+            socket.on('room code', function (roomCode) {
+                $('#room-code').text('Room Code: ' + roomCode);
+            });
 
+            // Update user list
+            socket.on('update users', function (users) {
+                var userList = users.map(userId => '<li>' + userId + '</li>').join('');
+                $('#user-list').html('<strong>Users in Room:</strong><ul>' + userList + '</ul>');
+            });
+
+            // Receive and display chat messages
+            socket.on('chat message', function (data) {
+                $('#messages').append($('<li>').text(data.id + ': ' + data.message));
+            });
+
+            // Handle invalid room code
+            socket.on('invalid room', function () {
+                alert('Invalid room code. Please enter a valid room code or create a new room.');
+            });
+
+            // Send chat messages
+            $('form').submit(function () {
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+        });
+    </script>
 </body>
 </html>
