--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Messaging</title>
-</head>
-<body>
+<!-- ... Previous code ... -->
+
     <div id="room-code-container">
         <button id="create-room">Create Room</button>
         <input id="join-room" placeholder="Enter Room Code" />
@@ -68,3 +62,4 @@
     </script>
 </body>
 </html>
+
