--- a/index.html
+++ b/index.html
@@ -1,44 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Sharing Website</title>
-</head>
-<body>
-    <h1>Video Sharing Website</h1>
+const express = require('express');
+const formidable = require('formidable');
+const fs = require('fs');
 
-    <form id="uploadForm">
-        <label for="videoInput">Select a video:</label>
-        <input type="file" id="videoInput" name="videoInput" accept="video/*" required>
-        <br>
-        <button type="button" onclick="uploadVideo()">Upload</button>
-    </form>
+const app = express();
+const port = process.env.PORT || 3000;
 
-    <div id="videoList"></div>
+app.use(express.static('public'));
 
-    <script>
-        function uploadVideo() {
-            var videoInput = document.getElementById('videoInput');
-            var videoList = document.getElementById('videoList');
+app.post('/upload', (req, res) => {
+    const form = new formidable.IncomingForm();
+    form.uploadDir = 'uploads';
 
-            var videoURL = URL.createObjectURL(videoInput.files[0]);
-
-            // Create an HTML5 video element
-            var videoElement = document.createElement('video');
-            videoElement.width = 400;
-            videoElement.controls = true;
-            videoElement.src = videoURL;
-
-            // Append the video element to the videoList div
-            videoList.appendChild(videoElement);
-
-            // Open a new window for video playback
-            var videoWindow = window.open('', '_blank', 'width=420,height=360');
-            videoWindow.document.write('<html><head><title>Video Player</title></head><body style="margin: 0; padding: 0;">');
-            videoWindow.document.write('<video width="100%" height="100%" controls autoplay><source src="' + videoURL + '" type="video/mp4"></video>');
-            videoWindow.document.write('</body></html>');
+    form.parse(req, (err, fields, files) => {
+        if (err) {
+            res.status(500).send('Internal Server Error');
+            return;
         }
-    </script>
-</body>
-</html>
+
+        const videoPath = files.videoInput.path;
+        const videoName = files.videoInput.name;
+
+        // Move the video file to a permanent location
+        const newPath = `uploads/${videoName}`;
+        fs.rename(videoPath, newPath, (err) => {
+            if (err) {
+                res.status(500).send('Internal Server Error');
+                return;
+            }
+
+            res.status(201).send('Video uploaded successfully!');
+        });
+    });
+});
+
+app.listen(port, () => {
+    console.log(`Server running at http://localhost:${port}`);
+});
