--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <script>
         // Cloudinary configuration
-        const cloudName = 'YOUR_CLOUD_NAME';
-        const uploadPreset = 'YOUR_UPLOAD_PRESET';
+        const cloudName = 'ddvnqy4kp';
+        const uploadPreset = 'oeprsvw0';
 
         cloudinary.setCloudName(cloudName);
 
